# mint-csv-import

./: csv_importer.py  import.py  mint.py  pyproject.toml
.locals/: .cookie  .processed-files
apple_transactions/: march-2021.csv  test-2021.csv
apple_transactions/originals/: Apple Card Transactions - February 2021.csv  Apple Card Transactions - January 2021.csv
utils/: constants.py  file_reader.py
