[tool.poetry]
name = "mint-csv-import"
version = "0.1.0"
description = ""
authors = ["Abhi"]

[tool.poetry.dependencies]
python = "^3.8"
DateTime = "4.3"
requests = "^2.25.1"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
